--- a/vc/packages.config
+++ b/vc/packages.config
@@ -16,11 +16,9 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net461" />
-  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
@@ -29,7 +27,9 @@
   <package id="Microsoft.Spatial" version="7.0.0" targetFramework="net461" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net461" />
@@ -43,4 +43,5 @@
   <package id="System.Spatial" version="5.6.0" targetFramework="net461" />
   <package id="System.Threading" version="4.0.11" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
